fix : 서류 신청 api 에러 fix
- apply 생성 시 createdAt이 null 값인 문제
- 모두싸인 외부 api 디버깅용 프린트문 추가
- DocumentType 템플릿 ID 추가
- Document DTO 'document_id' 중복 컬럼 문제

Signed-off-by: EunJiJung <bianbbc87@gmail.com>